# mycraft

./: .gitignore  COLLISION_FIX_SUMMARY.md  COLOR_COMBAT_LOOP.md  CONTRIBUTING.md  DESIGN_PILLARS.md  ENGINE_GAME_BOUNDARIES.md  GAME_DESIGN_DOCUMENT.md  PLAYER_GUIDE.md  PLAYTEST_QUICKSTART.md  README.md  ROADMAP.md  VISION.md  VISION_VOXEL_WORLD.md  VISUAL_POLISH.md  coverage_output.txt  debug_import.py  demo_water.py  design_meeting_summary.md  launcher.py  launcher.py.wrapper  pyproject.toml  requirements.txt  restart_playtest.sh  run_benchmark.py  run_client.py  run_editor.py  run_room1_demo.py  run_server.py  test_feedback.py  test_launcher.py  verify_collision_fix.py  verify_docs.py  verify_editor_architecture.py  verify_model_editor.py  verify_scaffolding.py  verify_structure_update.py
config/: playtest.json  server_config.json
docs/: PLAYTEST_CONFIG_GUIDE.md  avatar_standards.md  demo-game-concept.md  dev_build_guide.md  entity_sizing_standards.md  host_player_guide.md  index.md  networking_guide.md  performance_baseline.md  physics_system.md  sprint_update.md  tech_debt.md  testing_guide.md  texture_atlas_reference.md  world_generation_guidelines.md
engine/: __init__.py  animation.py  biomes.py  blocks.py  client_commands.py  game.py  game_app.py  hud.py  input_handler.py  physics.py  player.py  player_collision.py  remote_player.py  room1_demo.py  spawn_manager.py  texture_atlas.py  world.py
network/: client.py  commands.py  discovery.py  player_manager.py  server.py
tests/: conftest.py  test_animation.py  test_animation_layers.py  test_asset_manager.py  (+64 more)
(+280 files in other folders)
